# ros2-perception-pipelineV1

./: .dockerignore  .gitignore  Dockerfile  README.md  camvid_deeplabv3_segmentation.ipynb  cleanup_workspace.py  docker-compose.yml  entrypoint.sh
ros2_ws/: README.md
ros2_ws/src/drivable_area_node_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/drivable_area_node_cpp/src/: drivable_area_node.cpp
ros2_ws/src/perception_launch/: CMakeLists.txt  package.xml
ros2_ws/src/perception_launch/launch/: perception_pipeline.launch.py
ros2_ws/src/segmentation_node_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/segmentation_node_py/segmentation_node_py/: segmentation_node.py
ros2_ws/src/video_camera_node_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/video_camera_node_cpp/src/: video_camera_node.cpp
