<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_launch</name>
  <version>1.0.0</version>
  <description>Launch file to start the full segmentation perception pipeline.</description>
  <maintainer email="student@university.edu">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>video_camera_node_cpp</exec_depend>
  <exec_depend>segmentation_node_py</exec_depend>
  <exec_depend>drivable_area_node_cpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
